tests/paczka1/fuzzy1/92234355.err
Error in line 1: SkX S209 63,9
Error in line 5: SkX S319 35,7
Error in line 10: M20 S319 77,9
Error in line 11: M20 A294 10,4
Error in line 23: dibGl S319 5,8
Error in line 28: FNZseysr A294 81,1
Error in line 35: xpRFh8C1JS S209 7,9
